# cosmos

./: CHANGELOG.md  LICENSE.md  README.md  README.md.bak  cosmos.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/flag-cache/: Earley-0.10.1.0-18570dc89d4c14868bdc32fc0ac47a36
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/lib/x86_64-linux-ghc-7.10.3/Earley-0.10.1.0-En8e3fk2Z8E6SsXputSFYw/Text/: Earley.dyn_hi  Earley.hi
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/lib/x86_64-linux-ghc-7.10.3/Earley-0.10.1.0-En8e3fk2Z8E6SsXputSFYw/Text/Earley/: Derived.dyn_hi  Derived.hi  Grammar.dyn_hi  Grammar.hi  Internal.dyn_hi  Internal.hi  Mixfix.dyn_hi  Mixfix.hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/lib/x86_64-linux-ghc-7.10.3/cosmos-0.0.0-1iqUX5FQjOsHFaPsFk56bu/: Data.dyn_hi  Data.hi
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/lib/x86_64-linux-ghc-7.10.3/cosmos-0.0.0-1iqUX5FQjOsHFaPsFk56bu/Types/Parser/: Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux/lts-4.2/7.10.3/pkgdb/: Earley-0.10.1.0-18570dc89d4c14868bdc32fc0ac47a36.conf  cosmos-0.0.0-4bf5f6dfb33abe04dd9017b0b9d08e19.conf  package.cache
executable/: Main.hs  old.hs
test-suite/: TestSuite.hs
